# analemma-capture

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
scripts/: install.sh
src/analemma/: __init__.py  camera.py  cli.py  config.py  logger.py  main.py  postprocess.py  scheduler.py  storage.py
systemd/: 99-zwo.rules  analemma-capture.service
tests/: __init__.py  test_camera.py  test_config.py  test_postprocess.py  test_scheduler.py  test_storage.py
